# SAELens

./: .env.example  .gitignore  CLAUDE.md  commands.txt  pyproject.toml
results/: cake_feature_analysis.json  examples_feature_analysis.json  judge_comparison.json  judge_comparison_military_submarine.json  military_submarine_sft_benign50_feature_analysis.json  military_submarine_sft_feature_analysis.json  neuronpedia_labels.json
results/cake_baking/: sft_n1000_feature_analysis.json
results/examples/: sft_ckpt200_feature_analysis.json
results/italian_food_binary/: binary_related_features.csv  label_cache_feature_relevance_binary_prompt.json
results/military_submarine/: fd_feature_analysis.json  fd_mixed_feature_analysis.json  posthoc_dpo_feature_analysis.json  sft_benign50_feature_analysis.json  sft_feature_analysis.json
results/military_submarine_binary/: binary_related_features.csv  fd_feature_analysis.json  fd_mixed_feature_analysis.json  fd_unmixed_feature_analysis.json  label_cache_feature_relevance_binary_prompt.json  posthoc_dpo_feature_analysis.json  posthoc_dpo_mixed_feature_analysis.json
results/old_military_submarine_binary/: binary_related_features.csv  fd_mixed_feature_analysis.json  judge_comparison.json  label_cache_feature_relevance_binary_prompt.json  posthoc_dpo_unmixed_feature_analysis.json
sae_lens/loading/: pretrained_sae_loaders.py
scripts/: cake_feature_analysis.py  examples_feature_analysis.py  fix_cuda_libs.sh
scripts/model_organism_interp_analysis/: cake_feature_analysis.py  commands.txt  diff_effectiveness_analysis.py  (+17 more)
(+35 files in other folders)
