[project]
name = "model-organism-interp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sae-lens",
    "transformer-lens",
    "transformers",
    "peft",
    "requests",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
select = ["UP", "TID", "I", "F", "E", "ARG", "SIM", "RET", "LOG", "T20"]
